# llm-tui

./: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
.github/workflows/: release.yml
docs/: CLAUDE_TOOLS_ANALYSIS.md
src/: app.rs  bedrock.rs  claude.rs  config.rs  db.rs  input.rs  main.rs  ollama.rs  session.rs  tools.rs  tree.rs  ui.rs
src/provider/: bedrock.rs  claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  registry.rs
