[package]
name = "llm-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["sync"] }
vim-navigator = { git = "https://github.com/ducks/vim-navigator-rs", branch = "main" }
anthropic-sdk-rust = "0.1.1"
walkdir = "2.5"
glob = "0.3"
