[package]
name = "llm-tui-rs"
version = "20260220.0.1"
edition = "2021"
description = "Terminal UI for LLM chat with multi-provider support (Ollama, Claude, Bedrock)"
license = "MIT"
repository = "https://github.com/ducks/llm-tui"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["sync", "rt"] }
vim-navigator = "20260220.0.1"
anthropic-sdk-rust = "0.1.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-bedrock = "1.55"
aws-sdk-bedrockruntime = "1.55"
aws-smithy-types = "1.2"
futures = "0.3"
walkdir = "2.5"
glob = "0.3"
grep = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
